Add information on OutOfMemory errors during build