@@ -132,6 +132,16 @@ For an exhaustive list of tasks, use:
 
 We run **integration and performance test** using [Jenkins](https://jenkins.io/). The job definitions are available in the [Beam GitHub repository](https://github.com/apache/beam/tree/master/.test-infra/jenkins).
 
+#### Troubleshooting
+
+You might get an OutOfMemoryException during the Gradle build. If you have more memory
+available, you can try to increase the memory allocation of the Gradle JVM. Otherwise,
+disabling parallel test execution reduces memory consumption. In the root of the Beam
+source, edit the `gradle.properties` file and add/modify the following lines:
+
+    org.gradle.parallel=false
+    org.gradle.jvmargs=-Xmx2g -XX:MaxPermSize=512m
+
 ### Pull requests
 
 When your change is ready to be reviewed and merged, create a pull request.
